[package]
name = "fnmatch-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust port of Python's fnmatch: shell-style filename matching (*, ?, [seq], [!seq])."
license = "MIT"
repository = "https://github.com/VoiceLessQ/fnmatch-rs"
readme = "README.md"
keywords = ["fnmatch", "glob", "wildcard", "pattern", "filename"]
categories = ["filesystem", "text-processing"]

[dependencies]
regex = "1.12.4"
